--- a/css/global.css
+++ b/css/global.css
@@ -43,6 +43,7 @@ button, .button{ text-decoration:none !important;}
 .w40{width:40%;}
 .w45{width:45%;}
 .w48{width:48%;}
+.w49{width:49%;}
 .w50{width:50%;}
 .w50I{width:50% !important;}
 .w55{width:55%;}
